fix scrollbar color

--- a/bundles/public/css/contacts.css
+++ b/bundles/public/css/contacts.css
@@ -313,11 +313,11 @@ ul.dealer .site-link {
     }
 
     #modal-dealers {
-        margin: 40px;
+
         /*border: 1px solid #f00;*/
         height: 520px;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        /*overflow-x: hidden;*/
+        /*overflow-y: scroll;*/
     }
 
     #modal-dealers ul.dealer li {
@@ -325,13 +325,18 @@ ul.dealer .site-link {
     }
 
     .nano {
-        width: 900px;
+        margin: 40px;
+        width: 820px;
         height: 600px;
     }
 
     .nano .nano-content { padding: 10px; }
-    .nano .nano-pane   { background: #888; }
-    .nano .nano-slider { background: #111; }
+    .nano > .nano-pane   {
+        background: rgba(0,0,0,0.25);
+        width: 8px;
+        right: 0;
+    }
+    .nano > .nano-pane > .nano-slider { background: rgba(0,0,0,0.3); }
 }
 
 /*@media (min-width: 1140px) {*/
